[tool.poetry]
name = "repl_python3_V2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
wtforms = "^2.3.3"
flask = "^2.0.1"
flask-sqlalchemy = "^2.5.1"
flask-wtf = "^0.15.1"
sqlalchemy = "^1.4.18"
werkzeug = "^2.0.1"
pandas = "^1.2.5"
openpyxl = "^3.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
